node-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-demo
  template:
    metadata:
      labels:
        app: node-demo
    spec:
      containers:
      - name: node-demo
        image: node-demo:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
