node-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-demo
spec:
  selector:
    app: node-demo
  ports:
    - protocol: TCP
      port: 80         # Service port
      targetPort: 8082 # Container port
  type: NodePort # ClusterIP
